fixed about section and spacing

--- a/fle_site/apps/main/static/css/kolibri.css
+++ b/fle_site/apps/main/static/css/kolibri.css
@@ -145,6 +145,37 @@ hr{
 	margin-right:30%;
 }
 
+.about-img{
+	margin-top:5%;
+	margin-bottom:7%;
+}
+
+.img-bg{
+	background-color:#957FB3;
+	opacity:.85;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	min-height: 80vh;
+	max-width: 100%;
+	margin-top:-52%;
+	
+}
+
+.img-bg h1{
+	margin-top:16%;
+	color:#ffffff;
+	margin-bottom:2%;
+}
+
+.img-bg p{
+	color:#ffffff;
+	font-size:22px;
+	margin-left:30%;
+	margin-right:30%;
+}
+
 
 /* "ECOSYSTEM" FEATURES */
 
